--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-import streamlit as st
-from shroomdk import ShroomDK
-import pandas as pd
-import plotly.express as px
+streamlit
+shroomdk
+pandas
+plotly.express
